--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="apple-touch-icon" href="images/cabecalho.png" sizes="180x180">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+    <!-- Leitor de códigos robusto para Android e iOS -->
+    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     
     <!-- CSS MOBILE LAYOUT FINAL - PRODUTO MAIS BARATO NO TOPO -->
     <style>
@@ -595,7 +596,8 @@
                     <select id="camera-select" class="camera-select" aria-label="Selecionar câmera" style="display:none"></select>
                 </div>
                 <div class="scanner-wrapper">
-                    <video id="barcode-video" autoplay muted playsinline></video>
+                    <!-- Container onde o leitor renderiza o preview -->
+                    <div id="barcode-scanner" style="width:100%; max-width:480px; margin:0 auto;"></div>
                     <div class="scanner-overlay"></div>
                 </div>
                 <p id="scanner-message" class="scanner-message">Aponte a câmera para o código de barras.</p>
