Atualizar ícones PWA para usar carrinho.png como logo do app (iPhone/Android)

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preço Certo</title>
-    <meta name="theme-color" content="#4c51bf">
+    <meta name="theme-color" content="#2563eb">
     <link rel="manifest" href="/manifest.json">
     <!-- iOS PWA meta tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Preço Certo">
-    <!-- Single Apple touch icon (iOS will scale) -->
-    <link rel="apple-touch-icon" href="images/cabecalho.png" sizes="180x180">
+    <!-- Apple touch icon for iOS -->
+    <link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/icons/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="images/icons/icon-512.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Leitor de códigos robusto para Android e iOS -->
