Adicionar cache busting (v=127785a) nos scripts para forçar atualização do navegador

--- a/admin.html
+++ b/admin.html
@@ -410,7 +410,7 @@
     </script>
     
     <!-- Usar o mesmo scanner que funciona no index.html -->
-    <script src="js/barcode-scanner.js"></script>
+    <script src="js/barcode-scanner.js?v=127785a"></script>
     <script>
         // Adaptar scanner para preencher campo de código de barras do admin
         document.addEventListener('DOMContentLoaded', function() {
