--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <!-- Última atualização: 12/11/2025 às 23:22 - Build #3 -->
+    <!-- Última atualização: 13/11/2025 às 01:20 - Build #127785a - Fix camera switch -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preço Certo</title>
@@ -695,7 +695,7 @@
     </footer>
 
     <script src="js/script.js"></script>
-    <script src="js/barcode-scanner.js"></script>
+    <script src="js/barcode-scanner.js?v=127785a"></script>
     <script type="module" src="js/firebase-loader.js"></script>
     <script>
         // Root-scoped Service Worker registration (iOS-friendly)
