--- a/admin.html
+++ b/admin.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Quagga library DEVE ser carregado ANTES do barcode-scanner.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+    <style>
+        /* Classe específica para bloquear scroll quando modal de imagens está aberto */
+        body.google-image-modal-open {
+            overflow: hidden !important;
+        }
+    </style>
 </head>
 <body>
-    <!-- Tela de carregamento de autenticação para evitar flicker da tela de login -->
-    <div id="google-image-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); z-index:10001; align-items:center; justify-content:center; overflow:hidden;">
-        <div style="background:#fff; border-radius:10px; max-width:600px; width:95%; max-height:90vh; display:flex; flex-direction:column; box-shadow:0 4px 24px rgba(0,0,0,0.25); position:relative; overflow:hidden;">
+    <!-- Modal de Busca de Imagens Google -->
+    <div id="google-image-modal" class="google-image-modal-backdrop" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); z-index:10001; align-items:center; justify-content:center; overflow:hidden;">
+        <div class="google-image-modal-content" style="background:#fff; border-radius:10px; max-width:600px; width:95%; max-height:90vh; display:flex; flex-direction:column; box-shadow:0 4px 24px rgba(0,0,0,0.25); position:relative; overflow:hidden;">
             <!-- Header fixo -->
             <div style="padding:18px; border-bottom:1px solid #e5e7eb; flex-shrink:0;">
                 <button id="close-google-image-modal" style="position:absolute; top:10px; right:10px; background:none; border:none; font-size:22px; color:#333; cursor:pointer;"><i class="fas fa-times"></i></button>
